tests/NormalTests/paczka1/fuzzy1/98206235.err
Error in line 4: 0BraLqjPrS A712 83,4
Error in line 6: 0BraLqjPrS A256 82,9
Error in line 16: vUXn A256 6,9
Error in line 17: vUXn A991 10,7
Error in line 28: A712 A712 81,0
Error in line 34: 0BraLqjPrS A991 95,6
